# myGL

./: .gitignore  CMakeLists.txt  README.md
engine/include/: file.hpp  logger.hpp  shader.hpp  stb_image.h  texture.hpp  window.hpp
engine/include/glad/: glad.h
engine/lib/: engine.lib
engine/src/: CMakeLists.txt  shader.cpp  texture.cpp  window.cpp
libs/: glfw3.lib
openGL/: CMakeLists.txt  glad.c  main.cpp
openGL/res/: shader.frag
openGL/src/: file.hpp
test/: CMakeLists.txt  test.cpp
test/res/: shader.frag  shader.vert
